# orchestra

./: AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/plans/: 2026-07-18-public-prep.md
prompts/: validator.md  verify-review.md  worker.md
protocol/: CLAUDE-RELIABILITY.md  CODEX-RELIABILITY.md  HARNESS-RELIABILITY.md  ISSUE-GUIDE.md  OPERATIONS.md  STATES.md
src/orchestra/: ORCHESTRA.md  adapter.py  archive.py  attempt.py  cli.py  config.py  dashboard.py  dispatch.py  enginelock.py  envelope.py  git_ops.py  harness.py  issue.py  layout.py  outcome.py  planparse.py  projects.py  prompting.py  provenance.py  queue.py  reconcile.py  (+10 more)
systemd/: orchestra.service  orchestra.timer
tests/: conftest.py  fake_agent.py  fake_psql.py  fake_structured_harness.py  test_adapter.py  test_archive.py  test_attempt_outcomes.py  test_attempt_store.py  test_cli.py  test_cli_act.py  test_cli_engine.py  test_cli_fromplan.py  test_cli_misc.py  test_cli_newproject.py  test_cli_promote.py  test_cli_queuecheck.py  test_cli_read.py  test_config.py  test_dashboard.py  test_dispatch.py  test_docs_present.py  test_e2e_fake_loop.py  test_enginelock.py  test_envelope.py  test_git_ops.py  test_harness_adapters.py  test_harness_protocol_fixtures.py  test_issue.py  test_planparse.py  test_projects.py  test_prompting.py  test_provenance.py  test_providers.py  test_queue.py  test_reconcile.py  test_registry.py  test_result.py  test_scaffold.py  test_selection.py  test_smoke.py  (+10 more)
tools/: dispatch  merge-and-archive  reconcile  status-set  tick  validate  worktree-create
(+3 files in other folders)
