[project]
name = "orchestra"
version = "0.1.1"
description = "orchestra v2 — provider-agnostic multi-project agent workflow"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
orchestra = "orchestra.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestra"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "orchestra/defaults/prompts"
